Add Dockerfile and update application.properties

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,11 +1,10 @@
-spring.datasource.url=jdbc:postgresql://ep-odd-bread-82816814.eu-central-1.aws.neon.tech/kai?user=tomaslb26&password=FCBRv9QKg5Nw&sslmode=require
-spring.datasource.username=tomaslb26
-spring.datasource.password=FCBRv9QKg5Nw
+spring.config.import=optional:file:.env[.properties]
+spring.datasource.url=${DB_URL}
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 server.error.include-message=always
-discord.bot.token=MTE3MzYzMzkyNDQ5MzIyNTk5NA.GeQ3d0.eXzZqJJMn9EFYrCXSZg9rVgcxsJmAtproo0cSs
+discord.bot.token=${BOT_TOKEN}
 guild.id=803135919792193537
