--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^4.12.0"
   },
   "devDependencies": {
+    "@types/d3-scale-chromatic": "^3.0.3",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
