--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "cookie": "^0.6.0",
     "cookies-next": "^4.0.0",
     "d3-scale-chromatic": "^3.0.0",
+    "fetch-ponyfill": "^7.1.0",
     "js-cookie": "^3.0.5",
     "next": "^14.0.3",
     "react": "^18",
