--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,11 +1,8 @@
+# Stage 1: Build cloudflared
 FROM cloudflare/cloudflared:latest AS cloudflared
-# Install dotenv to load environment variables from a file
-RUN apk add --no-cache nodejs npm
-RUN npm install -g dotenv-cli
-
-# Add any additional setup specific to the cloudflared image, if needed
+WORKDIR /app
 COPY .env .env
-CMD ["dotenv", "-e", ".env", "tunnel", "--no-autoupdate", "run", "--token", "${CDN_TOKEN}"]
+RUN tunnel --no-autoupdate run --token "${CDN_TOKEN}"
 
 FROM maven:3.8.4-openjdk-17 AS build
 COPY . .
